<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.jackos2500.droidtop.DroidtopActivity" >

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/action_start"
        android:id="@+id/start_button"
        android:onClick="onButtonClick"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/scrollView" />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/report_button"
        android:text="@string/report_log"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:onClick="onButtonClick" />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/action_stop"
        android:id="@+id/stop_button"
        android:onClick="onButtonClick"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true" />

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/start_button"
        android:layout_above="@+id/clear_button">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="8sp"
            android:id="@+id/log_view" />
    </ScrollView>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/gui_button"
        android:text="@string/action_open_gui"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:onClick="onButtonClick"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/action_clear"
        android:id="@+id/clear_button"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:onClick="onButtonClick" />
</RelativeLayout>
